#63270 - Suppression ES + Montée Spring boot 3